--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "src/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "jest"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "uuidv4": "^6.2.0"
+    "uuidv4": "^6.0.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "jest": "^25.2.6",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
